--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "homepage": "https://github.com/oke6/AtCoderProgress#readme",
   "devDependencies": {
     "@google/clasp": "^2.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
+    "@types/eslint": "^8.4.3",
+    "@types/prettier": "^2.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.5.1"
   },
   "dependencies": {
